@@ -1,3 +1,5 @@
 Richard Hult        <richard@imendio.com>
 Mikael Hallendal    <micke@imendio.com>
 Alvaro del Castillo <acs@barrapunto.com>
+Kurt Maute	    <kurt@maute.us>
+Maurice van der Pot <griffon26@kfk4ever.com>
