@@ -1,2 +1,3 @@
 Kurt Maute <kurt@maute.us>
+Maurice van der Pot <griffon26@kfk4ever.com>
 Richard Hult <richard@imendio.com>
